Fix click event on mobile

--- a/src/scss/plyr-ads.scss
+++ b/src/scss/plyr-ads.scss
@@ -11,6 +11,7 @@
     right: 0;
     bottom: 0;
     z-index: 10;
+    cursor: pointer;
 
     video {
         left: 0;
@@ -25,6 +26,7 @@
         z-index: 11;
         background: rgba(0,0,0,.8);
         padding: 5px 10px;
+        cursor: pointer;
 
         &.done {
             font-size: 1.5rem;
